--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
