--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   cupertino_icons: ^1.0.8
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
