--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   image_picker: ^1.1.2
   cupertino_icons: ^1.0.8
   flutter_secure_storage: ^9.2.4
+  provider: ^6.1.2
+  dio: ^5.4.0
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
